<resources>
    <string name="app_name">Keyz</string>
    <string name="login_hello">Welcome back</string>
    <string name="your_email">Please enter your email</string>
    <string name="your_password">Please enter your password</string>
    <string name="login_button">Sign in</string>
    <string name="no_account">Don\'t have an account ? </string>
    <string name="sign_up">Sign up</string>
    <string name="sign_in">Sign in</string>
    <string name="immotep_logo_desc">Logo Keyz</string>
    <string name="keep_signed">Keep me signed in</string>
    <string name="forgot_password">Forgot password ?</string>
    <string name="login_details">Please enter your details to sign in.</string>
    <string name="create_account">Create your account</string>
    <string name="create_account_subtitle">Join keyz for your peace of mind !</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="password_confirm">Password confirmation</string>
    <string name="agree_terms">I agree to all Term, Privacy and Fees</string>
    <string name="already_account">Already have an account ?</string>
    <string name="first_name_error">Incorrect first name</string>
    <string name="last_name_error">Incorrect last name</string>
    <string name="email_error">Incorrect email</string>
    <string name="password_error">Incorrect password</string>
    <string name="password_confirm_error">Incorrect password confirmation</string>
    <string name="agree_terms_error">You must agree to all Term, Privacy and Fees</string>
    <string name="create_account_error">Error while creating account</string>
    <string name="bad_request">Error, you are not allowed to do that</string>
    <string name="unauthorized">Error, you are not authorized to do that</string>
    <string name="forbidden">Error, you are not allowed to do that</string>
    <string name="not_found">Error, content not found, please retry later</string>
    <string name="method_not_allowed">Error, method not allowed</string>
...
    <string name="unknown_error">Error, unknown error, please retry later or ask an admin</string>
    <string name="login_error">Email or password incorrect</string>
    <string name="overview">Overview</string>
    <string name="RealProperty">Properties</string>
    <string name="messages">Messages</string>
    <string name="settings">Settings</string>
    <string name="register_password_error">The password must be at least 8 characters long</string>
    <string name="busy">Busy</string>
    <string name="available">Available</string>
    <string name="add_prop">Add a property</string>
    <string name="back">Back</string>
    <string name="open_in_messages">Open in messages</string>
    <string name="about_the_property">About the property</string>
...
