...
    LoadingDialog(isLoading.value)
    Column(
        modifier = Modifier
            .background(MaterialTheme.colorScheme.background)
            .fillMaxSize()
            .padding(10.dp)
            .testTag("loginScreen")
            .verticalScroll(rememberScrollState())
    ) {
        Header()
        TopText(stringResource(R.string.login_hello), stringResource(R.string.login_details))
        Column(
            modifier =
...
                    fontSize = 12.sp,
                    color = MaterialTheme.colorScheme.secondary,
                    modifier =
                    Modifier
                        .padding(start = 3.dp)
                        .clickable { navController.navigate("register") }
                        .testTag("loginScreenToRegisterButton"),
                )
            }
        }
    }
}

